--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,8 @@ jobs:
     - name: Lint
       run: npm run format-check
 
+    - name: npm audit
+      run: npm audit --audit-level=moderate
+
     - name: npm test
       run: npm test
